`rw=restore-workflow`

--- a/checkout/.gitconfig
+++ b/checkout/.gitconfig
@@ -9,3 +9,4 @@
   cop  = checkout-previous-branch
   cor  = checkout --recurse-submodules
   corf = checkout --recurse-submodules -f
+  rw = restore-workflow
