`ec=edit-commit`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -10,6 +10,18 @@ alias gdtc="g dtc"
 alias gdth="g dth"
 alias gdthc="g dthc"
 
+alias gec="g ec"
+alias gecn="g ecn"
+alias gecnp="g ecnp"
+alias gecnx="g ecnx"
+alias gecp="g ecp"
+alias gecr="g ecr"
+alias gecrn="g ecrn"
+alias gecrp="g ecrp"
+alias gecrpn="g ecrpn"
+alias gecx="g ecx"
+alias gecxn="g ecxn"
+
 alias ghblr="g hblr"
 alias ghblrs="g hblrs"
 alias gmh="g mh"
