`rw=restore-worktree` alias fix, default arg `.`

--- a/checkout/.gitconfig
+++ b/checkout/.gitconfig
@@ -9,4 +9,5 @@
   cop  = checkout-previous-branch
   cor  = checkout --recurse-submodules
   corf = checkout --recurse-submodules -f
-  rw = restore-workflow
+  rw   = restore-worktree
+  rwt  = restore-worktree
