`g mv {commit,rebase}/git-reset-committer-date-rebase-head`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -69,6 +69,8 @@ alias grbud="g rbud"
 alias grud="g rud"
 
 alias grc="g rc"
+alias grcd="g rcd"
+alias grcdrbh="g rcdrbh"
 alias gri="g ri"
 alias grir="g rir"
 alias grit="g rit"
