`rn=add-rebase-continue-no-edit`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -58,6 +58,7 @@ alias grbsi="g rbsi"
 alias grbsin="g rbsin"
 alias grio="g rio"
 alias grlrb="g rlrb"
+alias grn="g rn"
 alias gro="g ro"
 alias grri="g rri"
 alias grrio="g rrio"
