`rwc=reword-commit="edit-commit -r"`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -90,6 +90,7 @@ alias goh="g oh"
 alias grhm="g rhm"
 alias groc="g roc"
 alias grocn="g rocn"
+alias grwc="g rwc"
 alias gsho="g sho"
 alias gshoc="g shoc"
 alias gshon="g shon"
