`cmba="commit-body -a"`, `cnb="commit-body --amend"`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -23,6 +23,7 @@ alias gcbns="g cbns"
 alias gcm="g cm"
 alias gcmab="g cmab"
 alias gcmb="g cmb"
+alias gcmba="g cmba"
 alias gcmf="g cmf"
 alias gcmfa="g cmfa"
 alias gcmp="g cmp"
@@ -31,6 +32,7 @@ alias gcmtf="g cmtf"
 alias gcmtr="g cmtr"
 alias gcmtrr="g cmtrr"
 alias gcn="g cn"
+alias gcnb="g cnb"
 alias gcne="g cne"
 alias gcnm="g cnm"
 alias gcam="g cam"
