`gdb="config --global init.defaultBranch"`

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -41,6 +41,7 @@ alias gggid="g ggid"
 alias gfue="g fue"
 alias gfun="g fun"
 alias gfune="g fune"
+alias ggdb="g gdb"
 alias ggue="g gue"
 alias ggun="g gun"
 
