--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -27,6 +27,7 @@
         cgu  = config --unset --global
         cfua = config --unset-all
         cgua = config --unset-all --global
+        gdb = config --global init.defaultBranch
         set-default-branch-main = config --global init.defaultBranch main
         sdbm = set-default-branch-main
         cfi = config --get-all include.path
