`{saf,smaf}="submodule add -f"`

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -2,9 +2,11 @@ alias gps="g ps"
 alias grhsl="g rhsl"
 alias gsac="g sac"
 alias gsaca="g saca"
-alias gsmac="g smac"
+alias gsaf="g saf"
 alias gsm="g sm"
 alias gsma="g sma"
+alias gsmac="g smac"
+alias gsmaf="g smaf"
 alias gsmc="g smc"
 alias gsmd="g smd"
 alias gsmi="g smi"
