--- a/revert/.git-rc
+++ b/revert/.git-rc
@@ -3,5 +3,7 @@ alias grneh="g rneh"
 alias grnh="g rnh"
 alias grvne="g rvne"
 alias grvneh="g rvneh"
+alias grvn="g rvn"
 alias grvt="g rvt"
 alias grvth="g rvth"
+alias grvtn="g rvtn"
