`ae=git-add-core-excludes`

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -1,4 +1,9 @@
 
+alias gace="g ace"
+alias gae="g ae"
+alias gaeg="g aeg"
+alias gael="g ael"
+alias gage="g age"
 alias gagi="g agi"
 alias gaps="g aps"
 alias gcf="g cf"
@@ -10,9 +15,13 @@ alias gcgd="g cgd"
 alias gcfi="g cfi"
 alias gcgi="g cgi"
 alias gcfig="g cfig"
+alias gcfigs="g cfigs"
 alias gcfef="g cfef"
+alias gcfefs="g cfefs"
 alias gcgig="g cgig"
+alias gcgigs="g cgigs"
 alias gcgef="g cgef"
+alias gcgefs="g cgefs"
 alias gcfis="g cfis"
 alias gcgis="g cgis"
 alias gcfia="g cfia"
