`dbm="config --global init.defaultBranch main"`

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -50,7 +50,10 @@ alias gggid="g ggid"
 alias gfue="g fue"
 alias gfun="g fun"
 alias gfune="g fune"
+alias gcgdb="g cgdb"
+alias gdbm="g dbm"
 alias ggdb="g gdb"
+alias ggdbm="g gdbm"
 alias ggue="g gue"
 alias ggun="g gun"
 
