--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -99,6 +99,7 @@ alias gshoh="g shoh"
 alias gshrh="g shrh"
 alias gshrm="g shrm"
 alias gsqsq="g sqsq"
+alias gswr="g swr"
 
 alias gtw="g tw"
 alias gtw="g tw"
