`caf="commit -aF-"`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -12,6 +12,8 @@ alias gc="g c"
 alias gca="g ca"
 alias gcaa="g caa"
 alias gcae="g cae"
+alias gcaf="g caf"
+alias gcamf="g camf"
 alias gcaem="g caem"
 alias gcam="g cam"
 alias gcamt="g camt"
