--- a/.git-rc
+++ b/.git-rc
@@ -80,8 +80,7 @@ append_subdir_to_path \
   rebase reflog remote reset rev-list revert rm_ \
   show stash status submodule \
   tag \
-  version \
-  watchman
+  version
 
 export o="origin"
 export oh="origin/HEAD"
