`core.excludesfile`, `clone.defaultRemoteName` aliases

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -18,6 +18,7 @@ alias gcfig="g cfig"
 alias gcfigs="g cfigs"
 alias gcfef="g cfef"
 alias gcfefs="g cfefs"
+alias gcgif="g cgif"
 alias gcgig="g cgig"
 alias gcgigs="g cgigs"
 alias gcgef="g cgef"
@@ -41,6 +42,7 @@ alias gggi="g ggi"
 alias grcp="g rcp"
 
 alias gsid="g sid"
+alias gsig="g sig"
 alias gsgid="g sgid"
 alias ggsid="g gsid"
 alias gsidg="g sidg"
@@ -59,6 +61,8 @@ alias ggue="g gue"
 alias ggun="g gun"
 
 alias gsdbm="g sdbm"
+alias gsdr="g sdr"
+alias gsdru="g sdru"
 alias gshc="g shc"
 
 alias gue="g ue"
