--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -36,6 +36,7 @@ alias gcmtrr="g cmtrr"
 alias gcn="g cn"
 alias gcnb="g cnb"
 alias gcne="g cne"
+alias gcnf="g cnf"
 alias gcnm="g cnm"
 alias gcam="g cam"
 alias gcan="g can"
