--- a/commit/.gitconfig
+++ b/commit/.gitconfig
@@ -40,6 +40,7 @@
   cn    = commit --amend
   cnb   = commit-body --amend
   cne   = commit --no-edit
+  cnf   = commit --amend -F-
   cnm   = commit --amend -m
   cpau  = copy-author
   cap   = commit-push
