`ltn = ls-tree --name-only`

--- a/ls/.git-rc
+++ b/ls/.git-rc
@@ -11,6 +11,7 @@ alias glt="g lt"
 alias glth="g lth"
 alias glthr="g lthr"
 alias glthn="g lthn"
+alias gltn="g ltn"
 alias gltr="g ltr"
 alias gtr="g tr"
 alias gtrh="g trh"
