--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -19,7 +19,7 @@ alias gdcss="g dcss"
 alias gdcw="g dcw"
 alias gdg="g dg"
 alias gdgif="g dgif"
-alias gdh="g diff HEAD"
+alias gdh="g dh"
 alias gdh1="g dh1"
 alias gdh2="g dh2"
 alias gdj="g dj"
