`cwt = checkout-worktree`

--- a/checkout/.git-rc
+++ b/checkout/.git-rc
@@ -10,5 +10,6 @@ alias gcon="g con"
 alias gcop="g cop"
 alias gcor="g cor"
 alias gcorf="g corf"
+alias gcwt="g cwt"
 alias grw="g rw"
 alias grwt="g rwt"
