--- a/checkout/.gitconfig
+++ b/checkout/.gitconfig
@@ -9,5 +9,6 @@
   cop  = checkout-previous-branch
   cor  = checkout --recurse-submodules
   corf = checkout --recurse-submodules -f
+  cwt  = checkout-worktree
   rw   = restore-worktree
   rwt  = restore-worktree
