`awt = amend-worktree`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -8,6 +8,7 @@ alias gapfu="g apfu"
 alias gaapf="g aapf"
 alias gaapfu="g aapfu"
 alias gaut="g aut"
+alias gawt="g awt"
 alias gc="g c"
 alias gca="g ca"
 alias gcaa="g caa"
