`rx{s,x} = rebase-exec-step`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -80,6 +80,8 @@ alias grim="g rim"
 alias grq="g rq"
 alias grx="g rx"
 alias grix="g rix"
+alias grxs="g rxs"
+alias grxx="g rxx"
 
 alias gar="g ar"
 alias garc='g arc'
