--- a/show/.git-rc
+++ b/show/.git-rc
@@ -1,8 +1,11 @@
 #!/usr/bin/env bash
 
+alias gchf="g chf"
 alias geq="g eq"
 alias gnsh="g nsh"
 alias gnshs="g nshs"
+alias gsadr="g sadr"
+alias gsard="g sard"
 alias gsh="g sh"
 alias gshmr="g shmr"
 alias gshms="g shms"
@@ -24,9 +27,10 @@ alias gshsl="g shsl"
 alias gshss="g shss"
 alias gshw="g shw"
 alias gsn="g sn"
+alias gsno="g sno"
+alias gsns="g sns"
 alias gsln="g sln"
 alias gsnl="g snl"
 alias gsnr="g snr"
 alias gsrn="g srn"
 alias gshhf="g shhf"
-alias gchf="g chf"
