`branch-points-at` improvements

--- a/branch/.git-rc
+++ b/branch/.git-rc
@@ -16,6 +16,10 @@ alias gbrs="g brs"
 alias gbrh="g brh"
 
 alias gbmv="g bmv"
+alias gbn="g bn"
+alias gbno="g bno"
+alias gbnor="g bnor"
+alias gbnr="g bnr"
 
 alias gb="g b"
 alias gbu="g bu"
