`gpp = grep --recurse-submodules -P`

--- a/grep/.git-rc
+++ b/grep/.git-rc
@@ -6,6 +6,7 @@ alias ggi="g gi"
 alias ggl="g gl"
 alias ggn="g gn"
 alias ggp="g gp"
+alias ggpp="g gpp"
 alias gngp="gn gp"
 alias ggpi="g gpi"
 alias ggpl="g gpl"
