`config push.default {current,upstream}` aliases

--- a/push/.git-rc
+++ b/push/.git-rc
@@ -8,6 +8,10 @@ alias gcgpdu="g cgpdu"
 
 alias gp="g p"
 alias gpd="g pd"
+alias gpdc="g pdc"
+alias gpdcg="g pdcg"
+alias gpdu="g pdu"
+alias gpdug="g pdug"
 alias gpf="g pf"
 alias gpfn="g pfn"
 alias gpl="g pl"
