`rebase-exec-step`: `-a/--amend` option

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -80,8 +80,11 @@ alias grim="g rim"
 alias grq="g rq"
 alias grx="g rx"
 alias grix="g rix"
+alias grxa="g rxa"
 alias grxs="g rxs"
+alias grxsa="g rxsa"
 alias grxx="g rxx"
+alias grxxa="g rxxa"
 
 alias gar="g ar"
 alias garc='g arc'
