`git-diff-x` aliases (via `qmdx`)

--- a/diff/.git-rc
+++ b/diff/.git-rc
@@ -50,6 +50,11 @@ alias gdtp="g dtp"
 alias gdu="g du"
 alias gdw="g dw"
 alias gdwc="g dwc"
+alias gdx="g dx"
+alias gdxc="g dxc"
+alias gdxcr="g dxcr"
+alias gdxr="g dxr"
+alias gdxw="g dxw"
 
 alias gd-="g d-"
 alias gdw-="g dw-"
