--- a/checkout/.git-rc
+++ b/checkout/.git-rc
@@ -10,6 +10,8 @@ alias gcon="g con"
 alias gcop="g cop"
 alias gcor="g cor"
 alias gcorf="g corf"
+alias gcow="g cow"
+alias gcw="g cw"
 alias gcwt="g cwt"
 alias grw="g rw"
 alias grwt="g rwt"
