`ccb=commit-body`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -22,6 +22,8 @@ alias gcamtf="g camtf"
 alias gcaam="g caam"
 alias gcbn="g cbn"
 alias gcbns="g cbns"
+alias gccb="g ccb"
+alias gccba="g ccba"
 
 alias gcm="g cm"
 alias gcmab="g cmab"
