--- a/push/.gitconfig
+++ b/push/.gitconfig
@@ -1,6 +1,7 @@
 [alias]
   cpd = config push.default
   cpdc = config push.default current
+  cpdd = config --unset push.default
   cpdu = config push.default upstream
   cfpd = config push.default
   cgpd = config --global push.default
