`sfe = submodule foreach`, `sfq = submodule foreach --quiet`

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -19,6 +19,8 @@ alias gsmst="g smst"
 alias gsmt="g smt"
 alias gfes="g fes"
 alias gsf="g sf"
+alias gsfe="g sfe"
+alias gsfq="g sfq"
 alias gsfv="g sfv"
 alias gsmf="g smf"
 alias gsrl="g srl"
